Add room database implementation

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     implementation "com.google.android.material:material:$rootProject.materialVersion"
     // Testing
     androidTestImplementation "androidx.arch.core:core-testing:$rootProject.coreTestingVersion"
+    debugImplementation 'com.amitshekhar.android:debug-db:1.0.6'
 
     implementation 'com.github.shinelw:library:1.0.1'
 
