--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,5 +56,5 @@ dependencies {
     implementation 'com.github.shinelw:library:1.0.1'
     implementation 'com.ernestoyaquello.stepperform:vertical-stepper-form:2.3.0'
     implementation "com.github.skydoves:progressview:1.0.9"
-
+    implementation 'com.github.ohoussein.playpauseview:playpauseview:1.0.2'
 }
