--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.khaledz.lifeassistance">
 
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,7 +10,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.lifeassistance.Activities.StepActivity"></activity>
+        <service
+            android:name="com.lifeassistance.Activities.TaskProgressService"
+            android:enabled="true"
+            android:exported="true"></service>
+
+        <activity android:name="com.lifeassistance.Activities.StepActivity" />
         <activity
             android:name="com.lifeassistance.Activities.MainActivity"
             android:label="@string/app_name"
