--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,4 +57,6 @@ dependencies {
     implementation 'com.ernestoyaquello.stepperform:vertical-stepper-form:2.3.0'
     implementation "com.github.skydoves:progressview:1.0.9"
     implementation 'com.github.ohoussein.playpauseview:playpauseview:1.0.2'
+    implementation 'com.ismaeldivita.chipnavigation:chip-navigation-bar:1.3.3'
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.4.0' // dependency of chip bar
 }
