--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,4 +59,5 @@ dependencies {
     implementation 'com.github.ohoussein.playpauseview:playpauseview:1.0.2'
     implementation 'com.ismaeldivita.chipnavigation:chip-navigation-bar:1.3.3'
     implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.4.0' // dependency of chip bar
+    implementation 'com.google.code.gson:gson:2.8.6'
 }
