--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,10 +11,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity
+            android:name="com.lifeassistance.Activities.ArchivedTasksActivity"
+            android:label="@string/title_activity_archived_tasks"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+
         <receiver
             android:name="com.lifeassistance.Services.CallTaskProgressService"
             android:enabled="true"
-            android:exported="true"></receiver>
+            android:exported="true" />
 
         <service
             android:name="com.lifeassistance.Services.TaskProgressService"
