--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,7 +57,20 @@ dependencies {
     implementation 'com.ernestoyaquello.stepperform:vertical-stepper-form:2.3.0'
     implementation "com.github.skydoves:progressview:1.0.9"
     implementation 'com.github.ohoussein.playpauseview:playpauseview:1.0.2'
-    implementation 'com.ismaeldivita.chipnavigation:chip-navigation-bar:1.3.3'
+    implementation 'com.ismaeldivita.chipnavigation:chip-navigation-bar:1.3.4'
     implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.4.0' // dependency of chip bar
     implementation 'com.google.code.gson:gson:2.8.6'
+
+    // YouTube APIs
+    implementation('com.google.api-client:google-api-client-android:1.22.0') {
+        exclude group: 'org.apache.httpcomponents'
+    }
+    implementation('com.google.apis:google-api-services-youtube:v3-rev183-1.22.0') {
+        exclude group: 'org.apache.httpcomponents'
+    }
+    implementation 'com.google.android.gms:play-services-auth:19.0.0'
+
+    //implementation 'com.google.oauth-client:google-oauth-client-jetty:1.23.0'
+    //implementation 'com.google.auth:google-auth-library-oauth2-http:0.24.1'
+    //implementation 'com.google.apis:google-api-services-oauth2:v2-rev20200213-1.31.0'
 }
